# RDMA_ML

./: README.md
experiments/scripts/: clean.sh  dist_loss_epochs.tex  dist_opt_epochs.tex  get_log_heads.py  grad_norm_epochs.tex  plot_colorful_graph.py  scp_all_logs.sh  te_acc_epochs.tex  time_epochs.tex  time_workers.tex  tr_acc_epochs.tex
src/: CMakeLists.txt  dnn.cpp  dnn.hpp  layers_impl.hpp  log_reg.cpp  log_reg.hpp  ml_model.cpp  ml_model.hpp
src/applications/: CMakeLists.txt  local.cpp  local_dnn.cpp  local_log_reg.cpp  server.cpp  server.hpp  worker.cpp  worker.hpp
src/coordinator/: CMakeLists.txt  ml_sst.cpp  ml_sst.hpp  sst.h
src/log_reg/: CMakeLists.txt  log_reg.cpp  log_reg.hpp
src/log_reg/applications/: CMakeLists.txt  parameter_server.cpp  parameter_server.cpp~  server.cpp  server.hpp  worker.cpp
src/log_reg/coordinator/: async_worker.cpp  async_worker.hpp  ml_sst.hpp
src/log_reg/utils/: CMakeLists.txt  ml_stat.cpp  ml_stat.hpp
src/utils/: CMakeLists.txt  ml_stat.cpp  ml_stat.hpp  utils.cpp  utils.hpp
